# loc-authorities

./: .buildinfo  .gitignore  README.md  api-reference.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api-reference.doctree  environment.pickle  getting-started.doctree  index.doctree
.github/workflows/: run-tests.yml
ci/: testsettings.py
docs/source/: api-reference.rst  conf.py  django-integration.rst  docsettings.py  getting-started.rst  index.rst
src/loc_authorities/: api.py  forms.py  test_urls.py  urls.py  views.py
tests/: test_api.py  test_django.py
tests/fixtures/: sh93000006.rdf
