[project]
name = "loc-authorities"
version = "0.3.0"
description = "Python module for interacting with Library of Congress Linked Data Service and API endpoint"
authors = [
    {name = "Center for Digital Scholarship at the American Philosophical Society", email = "cds@amphilsoc.org"},
    {name = "David Ragnar Nelson", email = "drnelson6@gmail.com"} 
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.1.4",
    "requests>=2.32.4",
]

[project.urls]
Documentation = "https://americanphilosophicalsociety.github.io/loc-authorities/"
Repository = "https://github.com/AmericanPhilosophicalSociety/loc-authorities"

[project.optional-dependencies]
test = [
    "pytest>8.4.1",
    "pytest-cov",
]
django = [
    "django>=5.2.15",
    "django-autocomplete-light>=5.0.0",
]
django_test = [
    "pytest-django>=4.12.0",
    "loc_authorities[django]",
]
docs = [
    "furo>2025.7.19",
    "sphinx",
]
dev = [
    "ruff>=0.12.7",
    "loc_authorities[django]",
    "loc_authorities[test]",
    "loc_authorities[django_test]",
    "loc_authorities[docs]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["loc_authorities[dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "testsettings"

[tool.ruff.format]
quote-style = "single"
